<resources>
    <string name="app_name">TipCalculatorApp</string>
    <string name="settings">Settings</string>
    <string name="tip_default">Tip Default:</string>
    <string name="_20">20%</string>
    <string name="split_bill_default">Split Bill Default:</string>
    <string name="split">Split</string>
    <string name="don_t_split">Don\'t Split</string>
    <string name="number_of_people_default">Number of People Default:</string>
    <string name="_4">4</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="tip_percentage">Tip Percentage %:</string>
    <string name="total">Total</string>
    <string name="split_check">Split Check</string>
    <string name="don_t_split_check">Don\'t Split Check</string>
    <string name="if_split_how_many">If Split, How Many?</string>
    <string name="ex_4_people">ex: 4 people</string>
    <string name="enter_purchase_amount">Enter Purchase Amount</string>
    <string name="settingButton">Settings</string>
    <string name="calculate">Calculate</string>
</resources>